front/styles.css
:root {
  --bs-form-switch-bg: #ff0000 !important;
}

@font-face {
  font-family: 'Formula1';
  src: url("../assets/fonts/Formula1-Regular.ttf") format('truetype');
}

@font-face {
  font-family: 'Formula1Bold';
  src: url("../assets/fonts/Formula1-Bold.ttf") format('truetype');
}

.bold-font {
  font-family: 'Formula1Bold' !important;
}


body {
  background-color: #110f24 !important;
  max-height: 930px;
  overflow-x: hidden;
  overflow-y: hidden;
}

.font {
  font-family: 'Formula1';
}

.rounded-checkbox {
  display: inline-flex;
  align-items: center;
  cursor: pointer;
  border-radius: 5px;
  margin-top: 10px;
  border: 1px solid #adb5bd;
  min-width: 20px;
  min-height: 20px;
}

.title {
  text-align: center;
  color: white;
  font-size: 28px;
}

.trasnfer-top-panel {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.transfer-title {
  flex: 1;
  text-align: center;
}

.auto-contract {
  color: white;
  font-size: 20px;
  padding-right: 2rem;
}


.stats-title {
  text-align: left;
  color: white;
  font-size: 26px;
  padding-left: 20px;
  padding-top: 20px;
}

.upper-section-stats {
  display: flex;
  justify-content: space-between;
  padding-right: 16px;
  min-height: 71px;
}

.ovr {
  display: flex;
  flex-direction: column-reverse;
  font-size: 24px;
  margin-right: 10px;

}

.ovrcombined {
  display: flex;
}

.overall-holder {
  background-color: #21202e;
  border: 3px solid white;
  border-radius: 10px;
  width: 66px;
  height: 56px;
  margin-top: 13px;
  margin-right: 15px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 24px;

}

.upper-panel {
  display: flex;
}

@keyframes colorChange {

  0%,
  100% {
    border: 3px solid white;
    border-radius: 10px;
    background-color: #21202e;
  }

  50% {
    border: 3px solid red;
    border-radius: 10px;
    background-color: #21202e;
  }
}



.alert {
  animation: colorChange 0.5s infinite;
  margin-bottom: 0px !important;
}

.main-title {
  text-align: left;
  padding-left: 29%;
  background-color: #18152e;
  padding-top: 1rem;
  padding-bottom: 0.1%;
  width: 71%;
}

.versionPanel {
  position: fixed;
  top: 10px;
  left: 10px;
  color: white;

}

.notification-panel {
  color: white;
  background-color: #18152e;
  width: 37%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;

}

.hide {
  animation: fadeOut 1s;
}

@keyframes fadeOut {
  from {
    opacity: 1;
  }

  to {
    opacity: 0;
  }
}

.tools-panel {
  color: white;
  background-color: #18152e;
  border-bottom: 1px solid #797599;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.main-panel {
  display: flex;
  position: relative;
  min-height: 79vh;
}

.script-view {
  display: flex;
  width: 100%;
}

.scirpt-info {
  font-size: 15px;
}

.script-selector {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-right: 20px;
}

.dropdown-menu {
  z-index: 9999 !important;
}

.save-selector {
  display: flex;
  flex-direction: column;
}

#dropdownButton {
  max-width: 210px;
  margin-top: 0.6rem;
  background-color: #797599;
  margin-bottom: 1%;
  border: 2px solid transparent;
  border-radius: 10px !important;


}

#dropdownButton:hover {
  border: 2px solid white !important;
}

#dropdownButton:active {
  background-color: #1a1826;
}

.addTracks-button {
  max-width: 210px;
  margin-top: 0.6rem;
  background-color: #797599 !important;
  margin-bottom: 1%;
  border: 2px solid transparent !important;
  border-radius: 10px !important;
  box-shadow: none;

}

.addTracks-button:hover {
  border: 2px solid white !important;
}

.addTracks-button:active {
  background-color: #1a1826;
}

#addTrackMenu{
  max-height: 300px;
  overflow-y: scroll;
}

#addTrackMenu::-webkit-scrollbar {
  width: 4px;
}

#addTrackMenu::-webkit-scrollbar-thumb {
  background-color: white;
  border-radius: 3px;
}

.menu-race{
  max-width: 200px;
}

.menuFlag{
  height: 10px;
  width: 20px;
  margin-left: 10px;
}

.main-columns-drag-section {
  margin-left: 5%;
  margin-right: 5%;
  border: 1px solid #797599;
  color: white;
  min-height: 600px;
  max-height: 660px;
  overflow-y: auto;
  border-radius: 10px;
  scrollbar-width: thin;
  scrollbar-color: white #e5e5e5;
}

.main-panel-stats {
  display: grid;
  grid-template-columns: repeat(3, 0.33fr);
}

.extra-atributes {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

.bottom-panel {
  display: flex;
  flex-direction: row;
}

.left-panel-stats {
  width: 100%;
}

.custom-hr {
  border: none;
  height: 1px;
  border: 1px solid #797599;
  margin-left: 20px;
  margin-top: 1rem;
  margin-bottom: 2rem;
}

.confirm-section {
  margin-left: 20px;
  margin-right: 20px;
  margin-bottom: 20px;
  margin-top: 15px;
  background-color: #18152e;
  border: 1px solid #797599;
  border-radius: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 120px;
  padding-bottom: 120px;
  padding-left: 315px;
  padding-right: 315px;
}

.custom-confirm {
  width: 160px;
  border: 2.5px solid transparent !important;
  border-radius: 10px !important;
  color: white !important;
  background-color: #797599 !important;
  transition: border-color 0.5s, background-color 0.5s !important;

}

.extra-inputs {
  margin-bottom: 20px !important;
  margin-top: 20px !important;
}

.custom-confirm:hover {
  background-color: #199c19 !important;
  border-color: #5cfc64 !important;
}

.custom-confirm:active {
  background-color: #0d5f0d !important;
}

.custom-delete {
  width: 160px;
  border: 2.5px solid transparent !important;
  border-radius: 10px !important;
  color: white !important;
  background-color: #797599 !important;
  transition: border-color 0.5s, background-color 0.5s !important;
  display: flex;
  justify-content: center;

}

.delete-mode{
  background-color: #9c1919 !important;
  border-color: #fc5c5c !important;
  transition: border-color 0.5s;
}
/* ... */

